fixed issue with height of main page being too big

--- a/src/app/pages/start-screen/start-screen.component.css
+++ b/src/app/pages/start-screen/start-screen.component.css
@@ -6,7 +6,7 @@
 	text-align: center;
 	font-size: 8em;
 	line-height: 1em;
-	margin: 50px 0;
+	padding: 50px 0;
 }
 
 h2 {
